<resources>
    <string name="app_name">Lab 2 - Task Manager</string>
    <string name="add_task">Add task</string>
    <string name="tasks_list">Tasks list:</string>
    <string name="title">Title</string>
    <string name="due_date_dd_mm_yyyy">Due date (DD-MM-YYYY)</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="meeting">Meeting</string>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="due_date">Due date</string>
    <string name="date">Date</string>
</resources>
